# MyCoder-v2.0

./: .env.dev  .flake8  .gitattributes  .gitignore  .hadolint.yaml  AGENTS.cz.md  AGENTS.md  CLAUDE.md  CODEX_HANDOFF_AI_TESTING.md  CODEX_TASK_AI_TESTING_FRAMEWORK.md  CODEX_TASK_MYCODER_EVOLUTION.md  CODEX_TASK_PHASE_2_3.md  CODEX_TASK_UI_IMPROVEMENTS.md  DEVELOPMENT.md  DICTATION_QUICKSTART.md  DICTATION_README.md  Dockerfile  Dockerfile.dev  Dockerfile.lightweight  GEMINI.md  HW_REQUIREMENTS.md  LICENSE  MYCODER_ADAPTIVE_MODES_DESIGN.md  Makefile  README.cz.md  README.md  TODO_FILE_EDIT_FIX.md  WEZTERM_TESTING.md  check_hardware.sh  code_generation_demo.py  codex_git_email_fix.md  demo_live_mycoder.py  demo_mycoder.py  dictation_config_local.json  dictation_config_tuned.json  docker-build.sh  docker-compose.dev.yml  docker-compose.lightweight.yml  docker-compose.yml  docker-entrypoint.dev.sh  (+36 more)
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  claude-code-review.yml  codeql.yml  docker-publish.yml  gemini-invoke.yml  gemini-review.yml  gemini-scheduled-triage.yml  gemini-triage.yml  hadolint.yml  python-app.yml  security.yml
.jules/: bolt.md
codeql-custom-queries-python/: codeql-pack.yml  example.actual
codeql-custom-queries-python/codeql-custom-queries-python.testproj/: codeql-database.yml
codeql-custom-queries-python/codeql-custom-queries-python.testproj/diagnostic/: cli-diagnostics-add-20260122T160803.000Z.json
docs/: DICTATION_APP.md
docs/api/: enhanced_mycoder_v2.md
docs/cs/: 2026-01-05-prubeh.md  README.md
docs/en/: README.md
docs/examples/: basic_usage.md
docs/guides/: installation.md  minipc_32bit.md  user_guide.md
docs/mini-ebook/: 00-index.md  01-whisper-deployment.md  02-raspberry-pi-dashboards.md  03-microllm-models.md  04-ps4-linux-hacking.md  05-xbox-one-hacking.md  06-gpu-driver-politics.md  07-hardware-ml-strategies.md
docs/specs/: FAILURE_MEMORY_SPEC.md  MODEL_ROUTER_SPEC.md  UI_REDESIGN_SPEC.md
examples/: dictation_demo.py  quick_start.py  thermal_management.py
mobile/: ARCHITECTURE.md  README.md  VOICE_FEATURES.md
mobile/android/: .gitignore  build.sh  gradle.properties  gradlew  settings.gradle.kts
mobile/android/app/: build.gradle.kts  proguard-rules.pro
mycoder-chat/: README.md  TROUBLESHOOTING.md  docker-compose.yml
mycoder-chat/.github/workflows/: ci.yml
mycoder-chat/backend/: debug_utils.py  main.py  requirements-dev.txt  requirements.txt  router.py
mycoder-chat/backend/tests/: conftest.py  test_api.py  test_router.py
mycoder-chat/frontend/: chat.js  index.html
skills/git-summary/: handler.py  skill.json
src/: __init__.py  adaptive_modes.py  api_providers.py  cli.py  cli_interactive.py  config_manager.py  enhanced_mycoder.py  enhanced_mycoder_v2.py  local_mcp_server.py  mcp_connector.py  mycoder.py  ollama_integration.py  tool_registry.py
src/claude_cli_auth/: __init__.py  adaptive_modes.py  auth_manager.py  cli.py  cli_interface.py  enhanced_mycoder.py  exceptions.py  facade.py  mcp_connector.py  models.py  mycoder.py  sdk_interface.py
src/mycoder/: __init__.py  adaptive_modes.py  api_providers.py  auto_executor.py  cli.py  cli_interactive.py  command_parser.py  config_manager.py  context_manager.py  demo_mycoder.py  enhanced_mycoder.py  enhanced_mycoder_v2.py  headless.py  local_mcp_server.py  mcp_bridge.py  mcp_connector.py  mycoder.py  ollama_integration.py  project_init.py  security.py  skills.py  speech_tool.py  storage.py  todo_tracker.py  tool_orchestrator.py  tool_registry.py  triage_agent.py  tts_engine.py  ui_activity_panel.py  ui_dynamic_panels.py  web_tools.py
src/mycoder/agents/: __init__.py  base.py  bash.py  explore.py  general.py  orchestrator.py  plan.py
src/mycoder/mcp/: __init__.py  client.py  protocol.py
src/mycoder/providers/: __init__.py  base.py  rate_limiter.py  router.py
src/mycoder/router/: __init__.py  intent_classifier.py  (+2 more)
src/speech_recognition/: __init__.py  audio_recorder.py  cli.py  config.py  dictation_app.py  gemini_transcriber.py  hotkey_manager.py  overlay_button.py  setup_wizard.py  text_injector.py  whisper_transcriber.py
src/utils/: file_ops.py
tests/: conftest.py  test_enhanced_mycoder_network.py  test_file_ops.py
tests/e2e/: AI_TESTING_FRAMEWORK.md  IMPLEMENTATION_PLAN.md  QUICK_START.md  README.md  USAGE_GUIDE.md  runner.py  test_ai_context_retention.py  test_ai_error_handling.py  test_ai_prompt_engineering.py  test_ai_tool_selection.py  test_poc_tool_selection.py  test_provider_fallback_metadata.py  test_simulation.py
tests/functional/: test_mycoder_live.py
tests/integration/: test_7tier_fallback.py  test_agent_orchestration.py  test_cli_tool_execution.py  test_enhanced_mycoder_integration.py  test_failure_memory_integration.py  test_mercury_provider.py  test_model_router_integration.py  test_multi_api_integration.py  test_plan_mode_workflow.py  test_self_evolve_approval.py  test_voice_workflow.py
tests/providers/: test_persistent_rate_limiter.py
tests/stress/: README.md  run_stress_tests.py  test_mycoder_stress.py  test_system_limits.py
tests/unit/: test_activity_panel.py  test_agents.py  test_ai_response_parser.py  test_api_providers.py  test_auth_manager.py  test_auto_executor.py  test_circuit_breaker.py  test_cli_interactive.py  test_cli_message_height.py  test_cli_regex.py  test_cli_render_cache.py  test_command_parser.py  test_config_manager.py  test_context_manager.py  test_edit_tool.py  test_enhanced_mycoder_v2_tools.py  test_failure_memory.py  test_headless.py  test_intent_classifier.py  test_mcp_bridge.py  test_mcp_client.py  test_mcp_protocol.py  test_model_router.py  test_plan_mode.py  test_project_init.py  test_public_api.py  test_rate_limiter.py  test_security.py  test_self_evolve_risk_assessor.py  test_speech_recognition.py  test_speech_tool.py  test_storage.py  test_task_context.py  test_termux_provider.py  test_todo_tracker.py  test_tool_orchestrator.py  test_tool_registry.py  test_triage_agent.py  test_tts_engine.py  test_ui_dynamic_panels.py  (+1 more)
(+148 files in other folders)
