[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mycoder"
version = "2.0.0"
description = "AI-powered development assistant with adaptive modes, Docker integration and local LLM support"
authors = ["David Strejc <strejc.david@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/milhy545/MyCoder-v2.0"
repository = "https://github.com/milhy545/MyCoder-v2.0"
documentation = "https://github.com/milhy545/MyCoder-v2.0/blob/main/docs"
keywords = ["ai", "development", "assistant", "claude", "adaptive", "mcp", "orchestration", "coding"]
packages = [{include = "speech_recognition", from = "src"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = "^3.8.1"
# claude-cli-auth = { git = "https://github.com/milhy545/claude-cli-authentication.git" }  # Temporarily disabled for Docker build
pydantic = "^2.0.0"
structlog = "^25.5.0"
aiofiles = "^24.1.0"
tenacity = "^9.0.0"
aiohttp = "^3.8.0"
psutil = "^7.1.3"

# Optional dependencies for enhanced features
httpx = { version = "^0.28.1", optional = true }
click = "^8.0.0"

# Speech recognition dependencies
PyQt5 = { version = "^5.15.0", optional = true }
sounddevice = { version = "^0.5.3", optional = true }
numpy = { version = "^1.24.0", optional = true }
openai-whisper = { version = "^20250625", optional = true }
openai = { version = "^2.2.0", optional = true }
pynput = { version = "^1.7.6", optional = true }
python-xlib = { version = "^0.33", optional = true }
pyperclip = { version = "^1.8.2", optional = true }

[tool.poetry.extras]
http = ["httpx"]
speech = ["PyQt5", "sounddevice", "numpy", "openai-whisper", "openai", "pynput", "python-xlib", "pyperclip"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.10.0"
black = "^24.3.0"
isort = "^5.12.0"
flake8 = "^7.1.2"
mypy = "^1.0.0"
pre-commit = "^3.0.0"
sphinx = "^7.1.2"
sphinx-rtd-theme = "^3.0.2"

[tool.poetry.scripts]
mycoder = "mycoder.cli:main"
mycoder-demo = "demo_mycoder:main"
dictation = "speech_recognition.cli:main"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["mycoder"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-v",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "functional: Functional tests",
    "stress: Stress tests",
    "slow: Slow running tests",
    "network: Tests requiring network access",
    "thermal: Tests requiring Q9550 thermal system",
    "auth: Tests requiring Claude CLI authentication",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]